Fix weird overflow problems on mobile

--- a/themes/bookvega/assets/_defaults.scss
+++ b/themes/bookvega/assets/_defaults.scss
@@ -13,7 +13,7 @@ $border-radius: $padding-4 !default;
 
 $body-font-weight: normal !default;
 
-$body-min-width: 30rem !default;
+$body-min-width: 20rem !default;
 $container-max-width: 100% !default;
 
 $header-height: 3.5rem !default;
